@@ -36,6 +36,9 @@ Trunk (not yet released)
 
     AVRO-1207. Java: Add tests for Maven plugins. (Sharmarke Aden via cutting)
 
+    AVRO-1210. Java: Fix mistakes in AvroMultipleOutputs error messages.
+    (Dave Beech via cutting)
+
   BUG FIXES
 
     AVRO-1171. Java: Don't call configure() twice on mappers & reducers.
